Add a dark theme -
- bg_dark: 		#222222ff
- selector_dark:	#00000088

Update README and add screenshot.
Update theme.conf to include new icons

--- a/src/theme.conf
+++ b/src/theme.conf
@@ -25,6 +25,10 @@ banner refind-theme-regular/icons/128-48/bg.png
 #banner refind-theme-regular/icons/256-96/bg.png
 #banner refind-theme-regular/icons/384-144/bg.png
 #banner refind-theme-regular/icons/512-192/bg.png
+#banner refind-theme-regular/icons/128-48/bg_dark.png
+#banner refind-theme-regular/icons/256-96/bg_dark.png
+#banner refind-theme-regular/icons/384-144/bg_dark.png
+#banner refind-theme-regular/icons/512-192/bg_dark.png
 
 #SELECTION IMAGE
 
@@ -32,11 +36,19 @@ selection_big refind-theme-regular/icons/128-48/selection-big.png
 #selection_big refind-theme-regular/icons/256-96/selection-big.png
 #selection_big refind-theme-regular/icons/384-144/selection-big.png
 #selection_big refind-theme-regular/icons/512-192/selection-big.png
+#selection_big refind-theme-regular/icons/128-48/selection_dark-big.png
+#selection_big refind-theme-regular/icons/256-96/selection_dark-big.png
+#selection_big refind-theme-regular/icons/384-144/selection_dark-big.png
+#selection_big refind-theme-regular/icons/512-192/selection_dark-big.png
 
 selection_small refind-theme-regular/icons/128-48/selection-small.png
 #selection_small refind-theme-regular/icons/256-96/selection-small.png
 #selection_small refind-theme-regular/icons/384-144/selection-small.png
 #selection_small refind-theme-regular/icons/512-192/selection-small.png
+#selection_small refind-theme-regular/icons/128-48/selection_dark-small.png
+#selection_small refind-theme-regular/icons/256-96/selection_dark-small.png
+#selection_small refind-theme-regular/icons/384-144/selection_dark-small.png
+#selection_small refind-theme-regular/icons/512-192/selection_dark-small.png
 
 #FONT
 
