--- a/src/theme.conf
+++ b/src/theme.conf
@@ -2,26 +2,26 @@
 
 #ICON
 
-icons_dir refind-theme-regular/icons/128-48
+#icons_dir refind-theme-regular/icons/128-48
 #icons_dir refind-theme-regular/icons/256-96
 #icons_dir refind-theme-regular/icons/384-144
 #icons_dir refind-theme-regular/icons/512-192
 
 #ICON SIZE
 
-big_icon_size 128
+#big_icon_size 128
 #big_icon_size 256
 #big_icon_size 384
 #big_icon_size 512
 
-small_icon_size 48
+#small_icon_size 48
 #small_icon_size 96
 #small_icon_size 144
 #small_icon_size 192
 
 #BACKGROUND IMAGE
 
-banner refind-theme-regular/icons/128-48/bg.png
+#banner refind-theme-regular/icons/128-48/bg.png
 #banner refind-theme-regular/icons/256-96/bg.png
 #banner refind-theme-regular/icons/384-144/bg.png
 #banner refind-theme-regular/icons/512-192/bg.png
@@ -32,7 +32,7 @@ banner refind-theme-regular/icons/128-48/bg.png
 
 #SELECTION IMAGE
 
-selection_big refind-theme-regular/icons/128-48/selection-big.png
+#selection_big refind-theme-regular/icons/128-48/selection-big.png
 #selection_big refind-theme-regular/icons/256-96/selection-big.png
 #selection_big refind-theme-regular/icons/384-144/selection-big.png
 #selection_big refind-theme-regular/icons/512-192/selection-big.png
@@ -41,7 +41,7 @@ selection_big refind-theme-regular/icons/128-48/selection-big.png
 #selection_big refind-theme-regular/icons/384-144/selection_dark-big.png
 #selection_big refind-theme-regular/icons/512-192/selection_dark-big.png
 
-selection_small refind-theme-regular/icons/128-48/selection-small.png
+#selection_small refind-theme-regular/icons/128-48/selection-small.png
 #selection_small refind-theme-regular/icons/256-96/selection-small.png
 #selection_small refind-theme-regular/icons/384-144/selection-small.png
 #selection_small refind-theme-regular/icons/512-192/selection-small.png
