First peronal edits to bobafetthotmail's fork of munlik's theme

--- a/theme.conf
+++ b/theme.conf
@@ -53,3 +53,13 @@ selection_small refind-theme-regular/icons/128-48/selection-small.png
 #FONT
 
 font refind-theme-regular/fonts/source-code-pro-extralight-14.png
+
+
+#zzk Edits
+
+#N.B. this dont_scan_files I set doesn't let rEFInd pick: Manjaro's GRUB
+#     and Fallback bootloader of the UEFI partition
+dont_scan_files /EFI/Manjaro/grubx64.efi, /EFI/Boot/bootx64.efi
+
+#N.B. hideui label removes the text description of each tag and the countdown timer
+hideui label
